lab7 finish