@@ -71,7 +71,7 @@ public class InsertRandomSpeedTest {
         String s = "cat";
         for (int i = 0; i < N; i++) {
             s = StringUtils.randomString(L);
-            treeMap.put(s, new Integer(i));
+            treeMap.put(s, Integer.valueOf(i));
         }
         return sw.elapsedTime();
     }
